# seo-audit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: monthly-health.yml
seo_audit/: __init__.py  audit.py
