[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-audit"
version = "1.0.0"
description = "Comprehensive SEO scanner for static sites — 38+ checks across 8 categories"
readme = "README.md"
license = "MIT"
authors = [{ name = "Peter Saddington" }]
requires-python = ">=3.9"
keywords = ["seo", "audit", "static-site", "html", "lighthouse", "core-web-vitals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Quality Assurance",
]

# Core functionality requires only stdlib.
# Optional dependencies below for --gsc.
dependencies = []

[project.optional-dependencies]
gsc = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.1",
]

[project.scripts]
seo-audit = "seo_audit.audit:main"

[project.urls]
Homepage = "https://github.com/agilepeter/seo-audit"
Issues = "https://github.com/agilepeter/seo-audit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["seo_audit*"]
